; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_ethtool.c_fm10k_self_test.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_ethtool.c_fm10k_self_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_test = type { i32 }
%struct.fm10k_intfc = type { %struct.fm10k_hw }
%struct.fm10k_hw = type { i32 }

@FM10K_TEST_LEN = common dso_local global i32 0, align 4
@drv = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Interface removed - test blocked\0A\00", align 1
@ETH_TEST_FL_FAILED = common dso_local global i32 0, align 4
@FM10K_TEST_MBX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.ethtool_test*, i32*)* @fm10k_self_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fm10k_self_test(%struct.net_device* %0, %struct.ethtool_test* %1, i32* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ethtool_test*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.fm10k_intfc*, align 8
  %8 = alloca %struct.fm10k_hw*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ethtool_test* %1, %struct.ethtool_test** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.net_device*, %struct.net_device** %4, align 8
  %10 = call %struct.fm10k_intfc* @netdev_priv(%struct.net_device* %9)
  store %struct.fm10k_intfc* %10, %struct.fm10k_intfc** %7, align 8
  %11 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %7, align 8
  %12 = getelementptr inbounds %struct.fm10k_intfc, %struct.fm10k_intfc* %11, i32 0, i32 0
  store %struct.fm10k_hw* %12, %struct.fm10k_hw** %8, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* @FM10K_TEST_LEN, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 4, %15
  %17 = trunc i64 %16 to i32
  %18 = call i32 @memset(i32* %13, i32 0, i32 %17)
  %19 = load %struct.fm10k_hw*, %struct.fm10k_hw** %8, align 8
  %20 = getelementptr inbounds %struct.fm10k_hw, %struct.fm10k_hw* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @FM10K_REMOVED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %3
  %25 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %7, align 8
  %26 = load i32, i32* @drv, align 4
  %27 = load %struct.net_device*, %struct.net_device** %4, align 8
  %28 = call i32 @netif_err(%struct.fm10k_intfc* %25, i32 %26, %struct.net_device* %27, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %29 = load i32, i32* @ETH_TEST_FL_FAILED, align 4
  %30 = load %struct.ethtool_test*, %struct.ethtool_test** %5, align 8
  %31 = getelementptr inbounds %struct.ethtool_test, %struct.ethtool_test* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = or i32 %32, %29
  store i32 %33, i32* %31, align 4
  br label %47

34:                                               ; preds = %3
  %35 = load %struct.fm10k_intfc*, %struct.fm10k_intfc** %7, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = load i64, i64* @FM10K_TEST_MBX, align 8
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  %39 = call i64 @fm10k_mbx_test(%struct.fm10k_intfc* %35, i32* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %47

41:                                               ; preds = %34
  %42 = load i32, i32* @ETH_TEST_FL_FAILED, align 4
  %43 = load %struct.ethtool_test*, %struct.ethtool_test** %5, align 8
  %44 = getelementptr inbounds %struct.ethtool_test, %struct.ethtool_test* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = or i32 %45, %42
  store i32 %46, i32* %44, align 4
  br label %47

47:                                               ; preds = %24, %41, %34
  ret void
}

declare dso_local %struct.fm10k_intfc* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i64 @FM10K_REMOVED(i32) #1

declare dso_local i32 @netif_err(%struct.fm10k_intfc*, i32, %struct.net_device*, i8*) #1

declare dso_local i64 @fm10k_mbx_test(%struct.fm10k_intfc*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
